--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 	<link rel="stylesheet" type="text/css" href="bin/style.css">
 </head>
 <body>
-	<div class="container">
+	<div class="cover">
+		<img src="media/footer.png" class="cover-isi">
+	</div>
+	<div class="container isi-aplikasi">
 		<br>
 		<img src="media/header.png" class="header">
 		<div class="arab">
