--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="cover">
-		<img src="media/footer.png" class="cover-isi">
+		<img src="media/cover.png" class="cover-isi">
 	</div>
 	<div class="container isi-aplikasi">
 		<br>
@@ -79,8 +79,7 @@
 			<h1><span class='deep-orange-text'>اَللهُمَّ</span> إِنَّكَ تَعلَمُ أَنَّ هَذِهِ القُلُوبَ قَدِ اجتَمَعَت عَلَى مَحَبَّتِكَ وَالتَقَت عَلَى طَاعَتِكَ وَتَوَحَّدَت عَلَى دَعوَتِكَ وَتَعَاهَدَت عَلَى نُصرَةِ شَرِيعَتِكَ فَوَثِّق، <span class='deep-orange-text'>اَللهُمَّ</span> رَابِطَتَهَا وَأَدِم وُدَّهَا وَهَادِهَا سُبُلَهَا وَاملَأهَا بِنُورِكَ الَّذِي لَا يَخبُو وَاشرَح صُدُورَهَا بِفَيضِ الإِيمَانِ بِكَ وَجَمِيلِ التَّوَكُّلِ عَلَيكَ وَأَحيِهَا بِمَرِفَتِكَ وَأَمِتهَا عَلَى الشَّهَادَةِ فِي سَبِيلِكَ، إِنَّكَ نِعمَ المَولَى وَنِعمَ النَّصِيرُ، <span class='deep-orange-text'>اَللهُمَّ</span> آمِينَ، وَصَلِّ <span class='deep-orange-text'>اَللهُمَّ</span> عَلَى سَيِّدِنَا مُحَمَّدٍ وَعَلَى آلِهِ وَصَحبِهِ وَسَلِّمَ</h1>
 			<p>Ya Allah, sesungguhnya Engkau Maha Mengetahui bahwa hati-hati ini telah berkumpul untuk mencurahkan mahabbah hanya kepada-Mu, bertemu untuk taat kepada-Mu, bersatu dalam rangka menyeru (dakwah di jalan)-Mu, dan berjanji setia untuk membela syariat-Mu, maka kuatkanlah ikatan pertaliannya, ya Allah, abadikanlah kasih sayangnya, tunjukkanlah jalannya, dan penuhilah dengan cahaya-Mu yang tidak akan pernah redup, lapangkanlah dadanya dengan limpahan iman dan keindahan tawakal kepada-Mu, hidupkanlah dengan marifah-Mu, dan matikanlah dalam keadaan syahid di jalan-Mu. Sesungguhnya Engkau sebaik-baik pelindung dan sebaik-baik penolong. Amin. Dan semoga shalawat serta salam selalu tercurahkan kepada Muhammad, kepada keluarganya, dan kepada semua sahabatnya.</p>
 		</div>
-		<img src="media/footer.png" class="footer">
-		<div style="width: 100%; height: 70px;"></div>
+		<div style="width: 100%; height: 50px;"></div>
 	</div>
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container">
