--- a/index.html
+++ b/index.html
@@ -81,16 +81,50 @@
 		</div>
 		<div style="width: 100%; height: 50px;"></div>
 	</div>
+
+	<!-- navbar fixed bottom -->
+
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container">
-			<div class="checkbox">
-				<label>
-					<input type="checkbox" class="menu-cek"> <span class='menu-teks'></span>
-				</label>
+			<div class="row">
+				<div class="col-xs-6">
+					<span class="checkbox">
+						<label>
+							<input type="checkbox" class="menu-cek"> <span class='menu-teks'></span>
+						</label>
+					</span>
+				</div>
+				<div class="col-xs-6">
+					<a href="#!" class="btn btn-default referensi" data-toggle="modal" data-target="#modal">Referensi</a>
+				</div>
 			</div>
 		</div>
 	</nav>
+
+	<!-- modal -->
+
+	<div class="modal fade" tabindex="-1" role="dialog" id="modal">
+		<div class="modal-dialog" role="document">
+	    	<div class="modal-content">
+	     	 	<div class="modal-header">
+	        		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        	<h4 class="modal-title">Referensi</h4>
+		      	</div>
+		      	<div class="modal-body">
+	    	    	<p>Hello World</p>
+	      		</div>
+			    <div class="modal-footer">
+	        		<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+	        		<!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+	      		</div>
+	    	</div><!-- /.modal-content -->
+	  	</div><!-- /.modal-dialog -->
+	</div><!-- /.modal -->
+
+	<!-- skrip -->
+
 	<script type="text/javascript" src="bin/jquery.min.js"></script>
+	<script type="text/javascript" src="bin/bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="bin/app.js"></script>
 </body>
 </html>
