--- a/index.html
+++ b/index.html
@@ -111,7 +111,115 @@
 		        	<h4 class="modal-title">Referensi</h4>
 		      	</div>
 		      	<div class="modal-body">
-	    	    	<p>Hello World</p>
+	    	    	<ol>
+						<li>
+							<p>Allah subhanahu wa taala berfirman,</p>
+							<p>Maka jika kamu membaca Al-Quran, mintalah perlindungan kepada Allah dari godaan setan yang terkutuk."</p>
+							<p>Diriwayatkan oleh Ibnu Sunni dari Anas radhiyallahu anhu dari Nabi shallallallahu alaihi wa sallam bahwa beliau bersabda,</p>
+							<p>Barangsiapa di waktu pagi mengatakan a'udzubilahis sami'il alim..., dia akan dibebaskan dari gangguan setan hingga sore."</p>
+						</li>
+						<li>
+							<p>Hadits Ubai bin Ka'ab radhiyallahu anhu menceritakan, bahwa Rasulullah shallallallahu alaihi wa sallam bersabda,</p>
+							<p>"Demi Dzat yang jiwaku berada dalam genggaman tangan-Nya. tidaklah diturunkan dalam Taurat, Zabur, Injil, atau Furqan yang sebanding dengan Al-Fatihah. Sesungguhnya ia merupakan tujuh ayat yang dibaca berulang - ulang dan Quran yang agung yang dianugerahkan kedapadaku." (HR. Tirmidzi dan ia mengatakan, "Hadits hasan shahih)</p>
+							<p>Juga diriwayatkan oleh Abu Dawud dan yang lainnya dengan sanad dari Ubay bin Ka'ab dari Nabi shallallallahu alaihi wa sallam bahwa beliau shallallallahu alaihi wa sallam bersabda,</p>
+							<p>"Setiap pekerjaan yang bermanfaat yang tidak dimulai dengan Bismillahirrahmanir-rahim. maka perkara itu terputus." Artinya amal itu sedikit nilai berkahnya. </p>
+						</li>
+						<li>
+							<p>Diriwayatkan oleh Ad-Darami dan Al-Baihaqi dalam Asy syu'ab dari Ibnu Mas'ud radhiyallahu anhu bahwa dia berkata, "Barangsiapa membaca sepuluh ayat dari surat Al-Baqarah di permulaan siang, maka ia tidak akan didekati oleh setan sampai sore. Dan jika membaca sore hari maka ia tidak akan didekati oleh setan sampai pagi dan ia tidak akan melihat sesuatu yang dibenci pada keluarga dan hartanya."</p>
+							<p>Diriwayatkan juga oleh Ath-thabrani dalam kitab Al-Kabir dan Al-Hakim dalam Shahihnya, dari Ibnu Mas'ud ra., Nabi shallallallahu alaihi wa sallam bersabda,</p>
+							<p>"Barangsiapa membaca sepuluh ayat; empat ayat dari awal surat Al-Baqarah, ayat kursi dan dua ayat sesudahnya, serta ayat - ayat terakhir dari Al-Baqarah tersebut, maka rumahnya tidak akan dimasuki oleh syetan sampai pagi."</p>
+						</li>
+						<li>
+							<p>Dari Al-Qasim bin Abdurrahman ra., dari Nabi shallallallahu alaihi wa sallam bahwa asma Allah yang agung itu ada pada tiga surat dalam Al-Qur'an yakni : surat Al Baqarah, Ali Imran, dan surat Thaha. Al-Qasim berkata, "Kemudian aku mencarinya, maka aku mendapatkan pada surat Al-Baqarah adalah ayat (kursi), "allahu la ilaha illa huwal hayyul qayyum", pada surat Ali Imran adalah ayat, "alif lam mim, allahu la illa huwal hayyul qayyum", dan pada surat Thaha adalah ayat, "wa ‘anatil wujuhu lil hayyil qayyum." (Hadits ini diriwayatkan oleh Adz-Dzahabi)</p>
+						</li>
+						<li>
+							<p>Dari Abu Darda' ra., dari Nabi shallallallahu alaihi wa sallam bahwa beliau bersabda,</p>
+							<p>"Barangsiapa di waktu pagi atau sore membaca hasbiyallahu.. tujuh kali, maka Allah akan mencukupi apa yang diinginkan dari perkara dunia dan akhirat." (Hadits ini diriwayatkan oleh Ibnu Sunii dan Ibnu Asakir secara marfu'. Diriwayatkan pula oleh Abu Dawud dan secara muqsuf oelh Abu darda')</p>
+						</li>
+						<li>
+							<p>Dari Abu musa Al-Asy'ari radhiyallahu anhu berkata bahwa Rasulullah shallallallahu alaihi wa sallam bersabda,</p>
+							<p>"Barangsiapa pada waktu pagi dan sore membaca : qulid'ullaha awid'urrahman sampai akhir ayat, maka hatinya tidak akan mati pada hari dan malam itu." (Hadits ini dirawatkan oleh Ad-Dilami dalam kitab Musna Al-Firdaus)</p>
+						</li>
+						<li>
+							<p>Dari Muhammad bin Ibrahim At-Taimi dari ayanya berkata, "Pada suatu peperangan Rasulullah shallallallahu alaihi wa sallam memberikan nasihat kepada kami agar membaca: afahasibtum annama khalaqnakum.. dan ayat - ayat berikutnya. Kamipun membacanya, maka kami berhasil memperoleh kemenangan dan keselamatan." (Hadits diriwayatkan oleh Ibnu Sunni, Abu Nu'aim, dan Ibnu Mandah. Al-Hafidz (Ibnu Hajar) berkata, "Sanadnya bisa diterima.")</p>
+						</li>
+						<li>
+							<p>Ibnu Abbas radhiyallahu anhu meriwayatkan bahwa Rasulullah shallallallahu alaihi wa sallam bersabda,</p>
+							<p>"Barangsiapa ketika pagi membaca subhanallahi hiina.. sampai pada wakazalikatukhrajun, maka ia akan menemukan apa - apa yang hilang pada hari itu. Dan barangsiapa membacanya pada sore hari, akan ia menemukan apa yang hilang pada malamnya." (HR. Abu Dawud)</p>
+						</li>
+						<li>
+							<p>Dari Abu bersabda, Umamah radhiyallahu anhu bahwa beliau shallallallahu alaihi wa sallam</p>
+							<p>"Barangsiapa membaca ayat - ayat akhir surat Al-Hasyr pada waktu malam atau siang, maka Allah akan menjamin baiknya surga." (HR> Al- Baihaqi).</p>
+						</li>
+						<li>
+							<p>Dalam hadits riwayat Ibnu Abbas radhiyallahu anhu (marfu') disebutkan bahwa, "idza zulzilat..." itu menyamai separo Al-Qur'an." (Hadits riwayat At-Timidzi dan Al-Hakim dari hadits Yaman bin al-mughirah)</p>
+						</li>
+						<li>
+							<p>Hadits Ibnu Abbas ra.,"qul ya ayyuhal kafirun itu menyamai seperempat Al-Quran". (Hadits riwayat At-Tirmidzi dan Al-Hakim. Dia mengatakan "Sanadnya shahih.")</p>
+						</li>
+						<li>
+							<p>Hadits dari Anas ra., bahwa Rasulullah shallallallahu alaihi wa sallam bersabda kepada salah seorang sahabatnya, "Bukankah bersamamu idza ja-a nahrullahi wal fathu?" Sahabat tadi menjawab, "Ya." Rasulullah shallallallahu alaihi wa sallam bersabda, "Ia menyamai seperempat Al- Qur'an." (Hadits riwayat At-Tirmidzi. Dia mengatakan, "Ini hadits hasan.")</p>
+						</li>
+						<li>
+							<p>Dari Abdullah bin Hubaib ra., ia berkata, "(Suatu ketika) kami keluar pada malah yang gelap gulita dan sedang hujan. Kami meminta kepada Rasulullah shallallallahu alaihi wa sallam agar berkenan mendoakan kami. Maka kamipun menjumpai beliau, lalu beliau bersabda, "Katakanlah!" Saya tidak mengatakan apa - apa. Kemudian beliau bersabda, "Katakanlah!" Saya tidak mengatakan apa - apa, Kemudian saya bertanya, "Apa yang harus saya katakan, wahai Rasulullah ?" Beliau bersabda, "qulhuwaallahu ahad dan dua surat perlindungan (Al-Falaq dan An-Nas) tatkala sore dan pagi hari masing - masing tiga kali, niscaya ia sudah mencukupi dari segala sesuatu." (Hadits riwayat Abu Dawud, Tirmidzi, dan An- Nasa'i. At-Tirmidzi berakta, "Ini hadits hasan shahih.")</p>
+						</li>
+						<li>
+							<p>Dari Abu Hurairah radhiyallahu anhu berkata, "Rasulullah shallallallahu alaihi wa sallam tatkala pagi hari selalu membaca : asbahna wa asbahal mulku lillah... dan ketika sore berkata amsaina wa-amsal mulku lillah..." (Hadits riwayat Ibunu Sunni dan Al-Bazzar. Al-Baihaqi berkata, "Hadits ini sanadnya baik.")</p>
+						</li>
+						<li>
+							<p>Dari Ubay bin Ka'ab radhiyallahu anhu berkata, "Ketika pagi hari Rasulullah shallallallahu alaihi wa sallam mengajarkan kepada kami untuk membaca: asbahna ala fithratil islam... dan ketika sore hari juga dengan doa yang sana." (Hadits riwayat Abdulllah bin Imam Ahmad Inbu Hanbal dalam Zawaid-Nya.)</p>
+						</li>
+						<li>
+							<p>Dari Ibnu Abbas ra., ira berkata, "Telah bersabda Rasulullah shallallallahu alaihi wa sallam, "Barangsiapa membaca tiga kali : allahumma inni asbahtu mingka..., maka wajib bai Allah untuk menyempurnakan nikmat-Nya kepadanya." (Hadits riwayat Ibnu Sunni)</p>
+						</li>
+						<li>
+							<p>Dari Abdullah bin Gannam Al-Bayadhi bahwa Rasulullah shallallallahu alaihi wa sallam bersabda, "Barangsiapa ketika pagi membaca: allahumma ma-asbaha bi.., maka sesungguhnya ia tealh menunaikan syukur pada hari itu. Dan barangsiapa membaca ketika sore hari, maka ia telah menunaikan syukur pada malam harinya." (Hadits riwayat abu Dawud, An-Nasa'i, dan Ibnu Hibban dalam Shahih-nya).</p>
+						</li>
+						<li>
+							<p>Dari Abdullah bin Umar ra., bahawasanya Rasulllah shallallallahu alaihi wa sallam bercerita kepada mereka tentang seorang hamba dari hamba Allah yang mengatakan: ya rabbi lakal hamdu..., maka dua malaikat merasa berat dan tidak tahu bagaimana harus mencatat (pahalanya). Kemudian keduanya naik ke langit seraya berkata, "Wahai Tuhan kami, sesungguhnya hamba-Mu telah mengatakan satu perkataan yang kami tidak tahu bagaimana mencatat (pahala)-nya." Allah subhanahu wa taala (Dia Maha tahu apa yang dikatakan hamba-Nya) berfirman, "Apakah yang dikatakan hamba-Ku?" kedua malaikat menjawab, "Sesungguhnya ia mengatakan: ya rabbi lakal hamdu... Maka Allah subhanahu wa taala berfirman, "Catatlah pahalanya sebagaimana yang diucapkan oleh hamba-Ku tadi, sampai ia berjumpa dengan-Ku niscaya Aku akan membalasnya." (Hadits riwayat Imam Ahmad, Ibnu Majah, dan para perawinya tsiqah).</p>
+						</li>
+						<li>
+							<p>Dari Juwairiyah (Ummul Mukminin ra.), Nabi shallallallahu alaihi wa sallam keluar dari sisiknya pagi - pagi untuk shalat shubuh di masjid. Beliau kembali (ke kamar Juwairiyah) pada waktu dhuha, sementara ia masih duduk di sana. Lalu Rasulullah shallallallahu alaihi wa sallam bertanya, "Engkau masih duduk sebagaimana ketika aku tinggalkan tadi ?" Juwairiyah menjawab, "Ya". Maka Rasulullah bersabda, "Sungguh, aku telah mengatakan kepadamu empat kata sebanyak tiga kali, yang seandainya empat kata itu ditimbang dengan apa saja yang engkau baca sejak tadi tentu akan menyamainya, (empat kata itu) adalah : subhanalla wabihamdihi, ‘adada khalqihi..." (hadits riwayat Muslim)</p>
+						</li>
+						<li>
+							<p>Dari utsman bin Affan radhiyallahu anhu berkata, "Rasulullah shallallallahu alaihi wa sallam bersabda, "Tidaklah seorang hamba setiap padi dan sore membaca: bismillahiladzi la yadhurru..., kecuali bahwa tidak ada sesuatu yang membahayakannya." (hadits riwayat Abu Dawud dan Tirmidzi. Tirmidzi berkata, "Hadits hasan shahih.")</p>
+						</li>
+						<li>
+							<p>Dari Abu Musa Al-Asy'ari radhiyallahu anhu berkata bahwa suatu hari Rasulullah shallallallahu alaihi wa sallam berkhutbah di hadapan kita, seraya bersabda,</p>
+							<p>"Wahai sekalian manusia, takutlah kalian kepada syirik, karena sesungguhnya syirik itu lebih lembut daripada binatang semut." Kemudian berkatalah seseorang kepada beliau, "Bagaimana kita berhati - hati kepadanya wahi Rasul, sementara dia lebih lembut daripada binatang semut ?" Rasulullah shallallallahu alaihi wa sallam bersabda, "Katakanlah allahumma inna na'udzubika..." (Hadits riwayat Ahmad dan Thabrani dengan sanad yang baik. Juga diriwayatkan oleh Abu Ya'la sebagaimana hadits tadi dari Hudzaifah, hanya saja Hudzaifah berkata, "Beliau (Rasulullah shallallallahu alaihi wa sallam) membacanya tiga kali.")</p>
+						</li>
+						<li>
+							<p>Dari Abu Hurairah ra., Rasulullah shallallallahu alaihi wa sallam bersabda, "Barangsiapa menjelang sore membaca: a'udzu bikalimatillahi...sebanyak tiga kali, maka tidak akan membahayakan baginya racun yang ada pada malam itu." (HR. Inbu Hibban dalam kitab shahihnya)</p>
+						</li>
+						<li>
+							<p>Dari Abu Sa'id Al-Khudri radhiyallahu anhu berkata, "Suatu hari Rasulullah shallallallahu alaihi wa sallam masuk masjid, tiba - tiba beliau jumpai seorang Anshar yang bernama Abu Umammah. Rasulullah shallallallahu alaihi wa sallam bertanya, "Wahai Abu Umamah, mengapa kamu duduk - duduk di masjid di luar waktu shalat?" abu Umamah radhiyallahu anhu menjawab, "Karena kegalauan yang melanda hatiku dan hutang - hutangku, wahai Rasulullah." Rasulullah shallallallahu alaihi wa sallam bersabda, "Bukankah aku telah mengajaraimu beberapa bacaan, yang bila kau baca niscaya Allah akan menghilangkan rasa galau dari dirimu dan melunasi hutang - hutangmu?" Abu Umamah berkata, "Betul, wahai Rasulullah." Rsulullah bersabda, "Ketika pagi sdan sore ucapkanalh : allahumma inni a'udzubika minal hammi wal hazan..." kemudian aku melakukan perintah tadi, maka Allah menghilangkan rasa galau dari diriku dan melunasi hutang - hutangku." (HR. Abu Dawud).</p>
+						</li>
+						<li>
+							<p>Dari Abdurrahman bin Abu Bakrah ra., dia berkata kepada ayahnya, "Wahai ayahku, sesungguhnya aku mendengar engkau berdoa, allahumma ‘afini fi badani... Engkau lakukan itu tiga kali ketika pagi dan tiga kali ketika sore," Sang ayah berkata, "Sesungguhnya aku mendengar Rasulullah shallallallahu alaihi wa sallam berdoa seperti itu, maka aku pun ingin mengikuti sunah beliau." (Hr. Abu Dawud dan yang lainnya).</p>
+						</li>
+						<li>
+							<p>Dari Syaddad bin Aus ra., Nabi shallallallahu alaihi wa sallam bersabda, "Sayyidul istighfar (doa permohonan ampunan yang terbaik) adalah : allahumma anta rabbi la- ilaha illa anta khakaqtani... Barangsiapa membacanya ketika sore hari sembari yakin akan kandungannya, kemudian meninggal pada malam itu, maka ia akan masuk surga. Dan barangsiapa membacanya pada pagi hari sembari yakin akan kandungannya kemudian meninggal pada hari itu, maka ia akan masuk surga." (HR. Bukhari dan yang lainnya).</p>
+						</li>
+						<li>
+							<p>Dari Zaid (pelayan Rasulullah shallallallahu alaihi wa sallam) berkata, "Aku mendengar Rasulullah shallallallahu alaihi wa sallam bersabda, "Barangsiapa yang membaca: astaghfirullahalladzi la-ilaha illa huwal hayyu..., Allah akan mengampuninya, meski ia lari dari pertempuran." (Hr. Abu Dawud, Tirmidzi, dan Al-Hakim. Al-Hakim berkata, "Hadits ini shahih berdasar atas syarah Bukhari dan Muslim.")</p>
+						</li>
+						<li>
+							<p>Dari Abu Darda' radhiyallahu anhu berkata, Rasulullah shallallallahu alaihi wa sallam bersabda, "Barangsiapa membaca shalawat kepadaku sepuluh kali ketika pagi dan sepuluh kali ketika sore, maka ia akan memperoleh syafaatku pada hari kiamat." (HR. Thabrani)</p>
+						</li>
+						<li>
+							<p>Dari Amru bin Syu'aib, dari ayahnya berkata, "Barangsiapa bertasbih kepada Allah seratus kali ketika pagi hari dan seratus kali ketika sore hari, maka ia seperti orang yang melakukan ibadah haji seratus kali. Barangsiapa bertahmid kepada Allah seratus kali ketika pagi dan seratus kali ketika sore hari maka ia seperti orang yang membawa seratus kuda perang untuk berjihad di jalan Allah. Barangsiapa mengucapkan tahlil (ucapan lailaha illallah) seratus kali ketika pagi hari dan seratus kali ketika sore hari, maka ia seprti memerdekakan seratus budak dari anak cucu Ismail. Baransiapa mengucapkan takbir (ucapan Allahu Akbar) seratus kali di pagi hari dan seratus kali di sore hari, maka Allah tidak akan memberi seseorang melebihi apa yang didirikan kepadanya, kecuali orang itu melakukan hal yang sama atau lebih." (HR. Tirmidzi dan ia berkata, "hadits ini hasan." An- Nasa'i juga meriwayatkan hadits yang sama)</p>
+							<p>Dan dari Ummu Hani' ra., Rasulullah shallallallahu alaihi wa sallam bersabda kepadanya, "Wahai Ummu Hani', ketika pagi hari bertasbihlah kepada Allah seratus kali, bacalah tahlil seratus kali, bacalah tahmid seratus kali, dan bertakbirlah seratus kali, maka sesungguhnya seratus tasbih itu (pahalanya) sama dengan seratus unta yang kau korbankan, dan seratus tahlil itu tidak akan menyisakan dosa sebelumnya dan sesudahnya." (HR. Thabrani).</p>
+						</li>
+						<li>
+							<p>Dari abu Ayyub ra., Rasulluah shallallallahu alaihi wa sallam bersabda, "Barangsiapa ketika pagi hari membaca : la- ilaaha ilallahu wahdahu la-syarika lahu... sepuluh kali, maka Allah akan mencatat setiap kali itu dengan sepuluh kebaikan dan menghapus sepuluh kejelekan, serta mengangkatnya dengan bacaan tadi sepuluh derajat. Bacaan tadi (pahlanya) bagaikan memerdekakan sepuluh budak, dan ia bagi pembacanya sebagai senjata bagi permulaan siang sampai menjelang sore, serta hari itu ia tidak akan mengerjakan pekerjaan yang akan mengalahkannya. Dan barangsiapa membaca- nya ketika sore hari, maka ia (pahalanya) seperti itu juga." (HR. Ahmad, Ath-Thabrani, Sa'id bi Mansur, dan yang lainnya).</p>
+						</li>
+						<li>
+							<p>Dari Jubair bin Muth'im radhiyallahu anhu berkata, Rasulullah shallallallahu alaihi wa sallam bersabda, "Barangsiapa membaca : subhahalli wabihamdika asy-hadu... pada suatu majelis dzikir, maka bacaan itu seperti stempel yang dicapkan padanya. Dan barangsiapa mengucapkannya pada forum iseng, maka bacaan itu sebagai kafarat baginya." (HR. An- Nasa'i. Al-Hakim, dan ath-Thabrani, dan yang lainnya)</p>
+						</li>
+						<li>
+							<p>Imam An-Nawawi dalam kitab Al-Adzkar berkata, "Kami meriwayatkan dalam kitab Hilyatul Auliya' dari Ali ra., "Barangsiapa suka mendapatkan timbangan kebajikan yang sempurna, maka hendaklah di akhir majelisnya ia membaca : subhana rabbika rabil ‘izzati amma yasifunun.. </p>
+						</li>
+					</ol>
 	      		</div>
 			    <div class="modal-footer">
 	        		<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
